# Transformer-Cuda-ENGtoESP

./: CMakeLists.txt  Makefile  README.md
scripts/: evaluate.sh  train.sh
src/: main.cu
src/data/: dataset.cu  dataset.cuh  tsv_parser.cu  vocab.cu  vocab.cuh
src/layers/: feed_forward.cu  feed_forward.cuh  layer_norm.cu  layer_norm.cuh  linear.cu  linear.cuh  multi_head_attention.cu  multi_head_attention.cuh  multi_head_attention_new.cu
src/training/: loss.cu  loss.cuh  optimizer.cu  optimizer.cuh  trainer.cu  trainer.cuh
src/transformer/: attention.cu  attention.cuh  decoder.cu  decoder.cuh  embeddings.cu  embeddings.cuh  encoder.cu  encoder.cuh  transformer.cu  transformer.cuh
src/utils/: cuda_utils.cu  mask_utils.cuh  matrix.cu  matrix.cuh  metric.cuh
